<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/main_text"
        android:textColor="@color/main_text_color"
        android:textSize="18sp" />

    <Button
        android:id="@+id/hot_film"
        style="@style/main_page_button"
        android:text="@string/hot_film" />

    <Button
        android:id="@+id/stock"
        style="@style/main_page_button"
        android:text="@string/stock" />

    <Button
        android:id="@+id/reader"
        style="@style/main_page_button"
        android:text="@string/xyz_reader" />

    <Button
        android:id="@+id/news"
        style="@style/main_page_button"
        android:text="@string/newest_news" />

    <Button
        android:id="@+id/graduation_project"
        style="@style/main_page_button"
        android:text="@string/graduation_project" />
</LinearLayout>
